fix(pwa): update link type for webmanifest

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 
     <!-- PWA manifest -->
-    <link ref="manifest" href="/manifest.webmanifest" />
+    <link
+      ref="manifest"
+      type="application/manifest+json"
+      href="/manifest.webmanifest"
+    />
 
     <!-- <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Fira+Sans+Condensed:wght@700&display=swap&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
